# EdgeFusion-CenterPoint

./: .gitignore  README.md  requirements.txt
.github/workflows/: ci.yml
bags/nuscenes_scene0.db3/: metadata.yaml
baseline/: README.md  __init__.py  eval.py  export_onnx.py
baseline/results/: fp32_baseline.json
compression/: README.md  __init__.py  distillation.py  generate_calib_bev.py  pareto.py  pruning.py  ptq.py  qat.py  sensitivity.py
compression/results/pareto/: pareto_summary.json
configs/: centerpoint_pillar02_circlenms_nus.py
deployment/: README.md
deployment/benchmarks/: benchmark.py
deployment/docker/: Dockerfile  docker-compose.yml
deployment/engine/: build_engine.cpp  int8_calibrator.h
deployment/plugins/: center_head_postprocess.cu  center_head_postprocess.h  postprocess_wrapper.py  test_parity.py
deployment/scripts/: benchmark.py  benchmark_e2e.py  build_engine.py  eval.py  eval_all.sh  eval_cuda.py  eval_metrics.py
docs/: design_decisions.md
mlflow/: README.md
ros2_autoware/: CMakeLists.txt  README.md  package.xml
ros2_autoware/config/: centerpoint.param.yaml  foxglove_layout.json
ros2_autoware/docker/: Dockerfile  docker-compose.yml
ros2_autoware/include/: centerpoint_trt.hpp  voxelizer.hpp
ros2_autoware/launch/: centerpoint.launch.xml
ros2_autoware/scripts/: detections_to_markers.py  nuscenes_to_ros2bag.py
ros2_autoware/src/: centerpoint_trt.cpp  lidar_centerpoint_node.cpp  voxelizer.cpp
script/: setup_env.sh
scripts/: hardware_monitor.py
