<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>edge_fusion_centerpoint</name>
  <version>0.1.0</version>
  <description>
    Compressed CenterPoint LiDAR 3D detection for Autoware on Jetson Orin Nano.
    Wraps the QAT INT8 TensorRT engine + CUDA center-head postprocessor as a
    ROS 2 Humble node that mirrors the autoware_lidar_centerpoint interface.
  </description>
  <maintainer email="gabriel@edgefusion.ai">Gabriel Manalu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- ROS 2 runtime -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Autoware perception messages -->
  <depend>autoware_perception_msgs</depend>

  <!-- TF for optional sensor→base_link transform -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>